Improve handling of large groups

--- a/config.yaml.example
+++ b/config.yaml.example
@@ -17,6 +17,7 @@ lunch_end_hour: 13     # Lunch break ends at 1 PM
 exclude_weekends: true # Skip Saturday and Sunday
 max_slots: 10          # Number of suggestions to show
 max_conflicts: 30      # Maximum conflict percentage to display (0-100)
+batch_size: 50         # Number of calendars to process per API request (for large groups)
 
 # You can also set default emails here (comma-separated)
 # emails: "user1@example.com,user2@example.com"
